--- a/inst/tutorials/summarise_sf/summarise_sf.Rmd
+++ b/inst/tutorials/summarise_sf/summarise_sf.Rmd
@@ -9,9 +9,12 @@ runtime: shiny_prerendered
 
 ```{r setup, include=FALSE}
 library(learnr)
+library(gradethis)
 library(dplyr)
 library(ggplot2)
+gradethis_setup()
 theme_set(theme_minimal())
+
 knitr::opts_chunk$set(
   echo = TRUE
   )
@@ -31,7 +34,7 @@ We need to convert `storms` from a data frame into a sf object to visualize and 
 storms_sf <-
   sf::st_as_sf(
     storms,
-    coords = 
+    coords = ____
   )
 
 class(storms_sf)
@@ -39,6 +42,12 @@ class(storms_sf)
 
 ```{r st_as_sf-hint}
 coords = c("long", "lat")
+```
+
+```{r st_as_sf-check}
+grade_result(
+  pass_if(~ any(grepl(.result, "sf")), "Good job!")
+)
 ```
 
 Following the example of the chapter on [Exploratory Data Analysis](https://r4ds.had.co.nz/exploratory-data-analysis.html) in _R for Data Science_, we are going to start by asking questions about our data. Here are the two kinds of questions we can try:
